tests/integration/features/options/options_per_project/include_doc_paths/02_invalid_option/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail

CHECK: error: strictdoc.toml: 'include_doc_paths': Path mask must start with an alphanumeric character or one of these characters: {{.*}}. Provided mask: ' '.
